refactor(auth-service) : add constants and fix services methodes and exceptions